--- a/browser/js/common/directives/attendee-event/attendee-event.html
+++ b/browser/js/common/directives/attendee-event/attendee-event.html
@@ -1,9 +1,9 @@
 <h3>{{ evt.name }}</h3>
 <div class="attend-event" ng-hide="attending">
-  <button class="sqn-btn-positive" ng-click="attendEvent(evt.$id)">Register for Event</button>
+  <button class="sqn-btn-positive" ng-click="attendEvent(evt.$id)" ng-show="evt['available']">Register for Event</button>
 </div>
 <div ng-show="attending" class="attending-options">
-  <button class="sqn-btn">Bringing guests?</button>
+  <button class="sqn-btn" ng-show="evt['available']">Bringing guests?</button>
   <button class="sqn-btn-danger" ng-click="removeFromEvent(evt.$id)">Cancel Attendance</button>
   <section class="attendee-aeg">
     <!-- <div> -->
