--- a/browser/js/attendee/attendee.html
+++ b/browser/js/attendee/attendee.html
@@ -5,7 +5,7 @@
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 form-group">
       <p>{{ userCat }}</p>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 form-group">
-      <h3>Events you are attending: </h3>
+      <h3>Anniversary Events </h3>
       <attendee-event ng-repeat="event in events" evt="event" attendee="user"></attendee-event>
     </div>
 
