Working responisve homepage elements.

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,11 +1,49 @@
-<section id="home">
-  <div id="main-title">
-    <h1>5 SQUADRON</h1>
+<section id="home" class="container-fluid">
+  <div id="main-title" class="row">
+    <div class="col-xs-6 col-xs-offset-6 col-sm-5 col-md-5 col-lg-5 home-side-panel">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 home-title">
+        <h3>5 Squadron</h3>
+        <span>ROYAL NEW ZEALAND AIR FORCE</span>
+        <!-- <p>Celebrating...</p> -->
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile-spanning-oceans">
+          <h4>75 Years</h4>
+          <span>Spanning the oceans and serving New Zealand</span>
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile-orions">
+        <h4>50 Years</h4>
+        <span>P-3 Orion Operations</span>
+      </div>
+      <!--<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile">
+        <p class="">Spanning the oceans for 75 years...a distinguished heritage forged by dedicated men and women like you. Help celebrate the milestone, reconnect and remember those who came before.</p>
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile">
+        <h4 class="sqn-btn">50 Years</h4>
+        <span>P-3 Orion Operations</span>
+      </div> -->
+    </div>
+    <!-- <div class="col-xs-6 col-xs-offset-6 col-sm-6 col-md-4 col-lg-4 home-subtitle">
+      <h3>50 YEARS</h3>
+      <span class="occassion-description">P-3 ORION OPERATIONS</span>
+    </div> -->
   </div>
-  <div class="occassion-title">
-    <h3>75 YEARS</h3>
-    <span class="occassion-description">SERVING NEW ZEALAND</span>
+  <div class="row home-description">
+    <!-- <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 tile-spanning-oceans">
+      <h2>75 Years</h2>
+      <span>Spanning the oceans...and serving New Zealand</span>
+    </div>
+    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 tile-orions">
+      <div class="tile-caption">
+        <h2>50 Years</h2>
+        <span>P-3 Orion Operations</span>
+      </div>
+    </div> -->
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile">
+      <p class="">Spanning the oceans for 75 years...a distinguished heritage forged by dedicated men and women like you. Help celebrate the milestone, reconnect and remember those who came before.</p>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile">
+      <h4 class="sqn-btn">50 Years</h4>
+      <span>P-3 Orion Operations</span>
+    </div>
   </div>
-  <button class="sqn-btn-homepage" ui-sref="newAttendee">Register</button>
-  <button class="sqn-btn-homepage"ui-sref="login">Login</button>
 </section>
