--- a/browser/js/common/directives/header-bar/header-bar.html
+++ b/browser/js/common/directives/header-bar/header-bar.html
@@ -2,8 +2,11 @@
   <div class="header-item-menu">
     <button class="sqn-btn-header" ui-sref="home">Home</button>
   </div>
+  <div ng-hide="currentUser" class="header-item-user">
+    <button class="sqn-btn-header" ui-sref="newAttendee">Register</button>
+    <button class="sqn-btn-header" ui-sref="login">Login</button>
+  </div>
   <div ng-show="currentUser" class="header-item-user">
-    <h4>Hi {{ currentUser.firstName }}!</h4>
     <button ng-click="goToUserProfile()" class="sqn-btn-header">Profile</button>
     <button ng-show="currentUser.manager" class="sqn-btn-header" ui-sref="management">Site Management</button>
     <button ng-click="logoutUser()" class="sqn-btn-header">Logout</button>
