Completed imagery for main-title section.

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -7,12 +7,22 @@
         <!-- <p>Celebrating...</p> -->
       </div>
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile-spanning-oceans">
-          <h4>75 Years</h4>
-          <span>Spanning the oceans and serving New Zealand</span>
+          <div class="anniversary">
+            <p>Celebrating</p>
+            <span class="anniversary-year">75</span>
+            <p>years</p>
+          </div>
+          <div class="anniversary-caption">
+            <span>Serving New Zealand</span>
+          </div>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile-orions">
-        <h4>50 Years</h4>
-        <span>P-3 Orion Operations</span>
+        <div class="anniversary">
+          <p>Celebrating</p>
+          <span class="anniversary-year">50</span>
+          <p>years</p>
+        </div>
+        <span class="anniversary-caption-dark">P-3 Orion Operations</span>
       </div>
       <!--<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile">
         <p class="">Spanning the oceans for 75 years...a distinguished heritage forged by dedicated men and women like you. Help celebrate the milestone, reconnect and remember those who came before.</p>
@@ -38,10 +48,28 @@
         <span>P-3 Orion Operations</span>
       </div>
     </div> -->
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile">
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 tile-spanning-oceans">
+        <div class="anniversary">
+          <p>Celebrating</p>
+          <span class="anniversary-year">75</span>
+          <p>years</p>
+        </div>
+        <div class="anniversary-caption">
+          <span>Serving New Zealand</span>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 tile-orions">
+      <div class="anniversary">
+        <p>Celebrating</p>
+        <span class="anniversary-year">50</span>
+        <p>years</p>
+      </div>
+      <span class="anniversary-caption-dark">P-3 Orion Operations</span>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 tile">
       <p class="">Spanning the oceans for 75 years...a distinguished heritage forged by dedicated men and women like you. Help celebrate the milestone, reconnect and remember those who came before.</p>
     </div>
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile">
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 tile">
       <h4 class="sqn-btn">50 Years</h4>
       <span>P-3 Orion Operations</span>
     </div>
