--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -4,74 +4,29 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 home-title">
         <h3>5 Squadron</h3>
         <span>ROYAL NEW ZEALAND AIR FORCE</span>
-        <!-- <p>Celebrating...</p> -->
       </div>
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile-spanning-oceans">
-          <div class="anniversary">
-            <p>Celebrating</p>
-            <span class="anniversary-year">75</span>
-            <p>years</p>
-          </div>
-          <div class="anniversary-caption">
-            <span>Serving New Zealand</span>
-          </div>
-      </div>
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile-orions">
-        <div class="anniversary">
-          <p>Celebrating</p>
-          <span class="anniversary-year">50</span>
-          <p>years</p>
+      <serve-nz-banner class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile-spanning-oceans">
+      </serve-nz-banner>
+      <orion-banner class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile-orions"></orion-banner>
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile-blurb">
+        <p>75 years spanning the oceans, built on the dedication of men and women like you.</p>
+        <p>Celebrate the distinguished heritage you helped build.</p>
+        <div class="anniversary-date-banner">
+          <h3>23-24 September 2016</h3>
+          <p>Auckland, New Zealand</p>
+          <span>To attend please register or login above</span>
         </div>
-        <span class="anniversary-caption-dark">P-3 Orion Operations</span>
       </div>
-      <!--<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile">
-        <p class="">Spanning the oceans for 75 years...a distinguished heritage forged by dedicated men and women like you. Help celebrate the milestone, reconnect and remember those who came before.</p>
-      </div>
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile">
-        <h4 class="sqn-btn">50 Years</h4>
-        <span>P-3 Orion Operations</span>
-      </div> -->
     </div>
-    <!-- <div class="col-xs-6 col-xs-offset-6 col-sm-6 col-md-4 col-lg-4 home-subtitle">
-      <h3>50 YEARS</h3>
-      <span class="occassion-description">P-3 ORION OPERATIONS</span>
-    </div> -->
   </div>
   <div class="row home-description">
-    <!-- <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 tile-spanning-oceans">
-      <h2>75 Years</h2>
-      <span>Spanning the oceans...and serving New Zealand</span>
+    <div class="anniversary-date-banner">
+      <h3>23-24 September 2016</h3>
+      <p>Auckland, New Zealand</p>
+      <span>To attend please register or login above</span>
     </div>
-    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 tile-orions">
-      <div class="tile-caption">
-        <h2>50 Years</h2>
-        <span>P-3 Orion Operations</span>
-      </div>
-    </div> -->
-    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 tile-spanning-oceans">
-        <div class="anniversary">
-          <p>Celebrating</p>
-          <span class="anniversary-year">75</span>
-          <p>years</p>
-        </div>
-        <div class="anniversary-caption">
-          <span>Serving New Zealand</span>
-        </div>
-    </div>
-    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 tile-orions">
-      <div class="anniversary">
-        <p>Celebrating</p>
-        <span class="anniversary-year">50</span>
-        <p>years</p>
-      </div>
-      <span class="anniversary-caption-dark">P-3 Orion Operations</span>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 tile">
-      <p class="">Spanning the oceans for 75 years...a distinguished heritage forged by dedicated men and women like you. Help celebrate the milestone, reconnect and remember those who came before.</p>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 tile">
-      <h4 class="sqn-btn">50 Years</h4>
-      <span>P-3 Orion Operations</span>
-    </div>
+    <serve-nz-banner class="col-xs-12 col-sm-12 col-md-6 col-lg-6 tile-spanning-oceans">
+    </serve-nz-banner>
+    <orion-banner class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile-orions"></orion-banner>
   </div>
 </section>
