Will not upgrade to Firebase 3.x.x until Version 2.x.x of AngularFire is released for compatibility.

--- a/browser/js/new-attendee/new-attendee.html
+++ b/browser/js/new-attendee/new-attendee.html
@@ -15,9 +15,8 @@
     <div ng-click="registerMethod('facebook')" class="button-panel facebook-btn" title="Register using Facebook">
       <img src="/images/newAttendee/fb-logo.png" alt="Register using Facebook"></img>
     </div>
-    <div ng-click="registerMethod('google')" class="button-panel google-btn">
-      G+
-    </div>
+    <!-- <div ng-click="registerMethod('google')" class="button-panel google-btn">
+    </div> -->
   </div>
   <div class="row">
     <form ng-hide="registerMethodChosen === null" id="registerForm" name="register" ng-submit="saveAttendee()">
